# fly

./: .gitignore
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml  themes.xml
desktop/: PKGBUILD  build.gradle.kts  gradle.properties  settings.gradle.kts
desktop-cpp/: meson.build  run.sh
desktop-cpp/data/: fly.desktop
desktop-cpp/src/: app.cpp  app.h  main.cpp
desktop-cpp/src/discovery/: device_discovery.cpp  device_discovery.h
desktop-cpp/src/network/: fly_client.cpp  fly_client.h  fly_server.cpp  fly_server.h  peer_connection.cpp  peer_connection.h
desktop-cpp/src/protocol/: fly_frame.cpp  fly_frame.h  fly_message.cpp  fly_message.h
desktop-cpp/src/transfer/: transfer_item.h  transfer_manager.cpp  transfer_manager.h
desktop-cpp/src/ui/: main_window.cpp  main_window.h
desktop-cpp/subprojects/: nlohmann_json.wrap
desktop/src/main/resources/: icon.icns
ios/Fly/: ContentView.swift  FlyApp.swift  Info.plist
ios/Fly/Core/Debug/: LogCapture.swift
ios/Fly/Core/Discovery/: DeviceDiscovery.swift  NetworkDevice.swift
ios/Fly/Core/Network/: FlyClient.swift  FlyServer.swift  PeerConnection.swift
ios/Fly/Core/Protocol/: FlyProtocol.swift
ios/Fly/Core/Transfer/: TransferItem.swift  TransferManager.swift
ios/Fly/UI/Components/: DeviceCard.swift  TransferRow.swift
ios/Fly/UI/Screens/: DevicesView.swift  SettingsView.swift  TransferView.swift
ios/Fly/ViewModels/: AppViewModel.swift
(+36 files in other folders)
